--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.servlet.multipart.max-request-size=20MB
 spring.cloud.aws.region.static=us-east-1
 server.port=5000
 
-logging.level.software.amazon.awssdk=DEBUG
-logging.level.com.amazonaws=DEBUG
+#logging.level.software.amazon.awssdk=DEBUG
+#logging.level.com.amazonaws=DEBUG
