--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>imagery</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
