--- a/.github/workflows/docker-image-to-ecr.yml
+++ b/.github/workflows/docker-image-to-ecr.yml
@@ -24,7 +24,7 @@ jobs:
       env:
         ECR_REGISTRY: public.ecr.aws/r1b3l1w9
         ECR_REPOSITORY: imagery
-        IMAGE_TAG: ${{ github.sha }}
+        IMAGE_TAG: imagery_image
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
